fixed alignments

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -16,7 +16,7 @@
 }
 
 .card-details h4 {
-  font-size: .8rem;
+  font-size: 1.3rem;
   color: $dark-font;
   font-family: $headers;
   margin: 10px 3px 0 3px;
@@ -26,5 +26,5 @@
   font-family: $body;
   margin: 5px;
   color: $light-font;
-  font-size: .6em;
+  font-size: 1em;
 }
