--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -42,7 +42,7 @@ p {
 
 // ROOM BANNERS MANAGER
 .grand {
-  background-image: url(grand-gite-chambre2.jpg);
+  background-image: url(grand-gite-chambre.jpg);
   height: 30em;
   background-size: cover;
   width: 100% !important;
